automation refactoring, add more system settings, add support for more modules

--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -6,6 +6,7 @@
   --foreground-alt-color: #fff;
   --highlight-background-color: #d20608;
   --highlight-foreground-color: #ffffff;
+  --warning-color: var(--highlight-background-color);
   --window-background: url(/systems/pirateborg/ui/parchment-2.jpg) repeat;
   --window-header-color: #ffffff;
   --window-header-background-color: #000000;
@@ -1068,12 +1069,17 @@ form.editable .results input[type=text]:hover, form.editable .results input[type
 #chat-log .chat-message .message-header {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   margin-bottom: 8px;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 4px;
 }
 #chat-log .chat-message .message-header .message-sender {
   font-family: var(--h1-font);
   font-size: 24px;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 #chat-log .chat-message .message-header .message-metadata {
   font-family: var(--chat-info-font);
@@ -1081,7 +1087,8 @@ form.editable .results input[type=text]:hover, form.editable .results input[type
   display: flex;
   align-items: flex-start;
   justify-content: flex-end;
-  gap: 8px;
+  gap: 4px;
+  flex: 0 0 70px;
 }
 #chat-log .chat-message .message-header span.flavor-text {
   background: var(--highlight-background-color);
@@ -1494,6 +1501,23 @@ hr {
   color: var(--highlight-background-color);
 }
 
+p.nue {
+  font-size: 16px;
+}
+
+h3.nue {
+  border-bottom: 2px groove var(--light-border-color);
+  border-top: 2px groove var(--light-border-color);
+  font-weight: 600;
+}
+
+footer.nue {
+  font-size: 14px;
+  font-style: italic;
+  color: black;
+  border-top: 2px groove var(--light-border-color);
+}
+
 /* ====================== */
 /* Roll Cards */
 /* ====================== */
@@ -1505,6 +1529,14 @@ hr {
   margin-bottom: 24px;
   text-align: center;
   padding-top: 4px;
+}
+.roll-card .attack-outcome-target {
+  font-style: italic;
+  font-size: 13px;
+  font-weight: 400;
+  margin-bottom: 20px;
+  text-align: center;
+  margin-top: -20px;
 }
 .roll-card .dr-modifiers {
   margin-bottom: 16px;
@@ -1667,8 +1699,9 @@ hr {
   font-size: 14px;
 }
 .custom-dialog .warning {
-  font-weight: 500;
-  color: red;
+  font-weight: 600;
+  font-style: italic;
+  color: var(--warning-color);
 }
 .custom-dialog ul {
   list-style-type: none;
@@ -1722,6 +1755,26 @@ hr {
 .attack-dialog .form-group {
   display: flex;
   align-items: flex-start;
+}
+.defense-dialog .form-group .form-fields .form-warning-icon,
+.attack-dialog .form-group .form-fields .form-warning-icon {
+  color: var(--warning-color);
+  flex: 0 0 20px;
+  cursor: help;
+  text-align: center;
+}
+.defense-dialog .form-group .form-fields #defenseModifiedDr,
+.attack-dialog .form-group .form-fields #defenseModifiedDr {
+  flex: 0 0 32px;
+}
+.defense-dialog .form-group.form-group-target,
+.attack-dialog .form-group.form-group-target {
+  margin: 0;
+}
+.defense-dialog .form-group.form-group-target .target-selection,
+.attack-dialog .form-group.form-group-target .target-selection {
+  height: var(--form-field-height);
+  line-height: 28px;
 }
 .defense-dialog .radio-group-radio,
 .attack-dialog .radio-group-radio {
@@ -1822,6 +1875,10 @@ hr {
   min-width: 200px;
 }
 
+#dice-config {
+  min-width: 850px;
+}
+
 .window-app .window-content textarea:hover {
   box-shadow: 0 0 10px var(--highlight-background-color);
 }
@@ -1858,6 +1915,42 @@ button.dice-calculator--button {
 #settings button {
   padding: 0 16px !important;
   margin: 4px 0 !important;
+}
+
+.sidebar-tab .action-buttons button.import-dd {
+  margin: 8px !important;
+  width: calc(100% - 16px);
+}
+
+#client-settings {
+  min-height: auto !important;
+  height: auto !important;
+}
+#client-settings #config-tabs div.tab[data-tab=modules] #searchField {
+  border: none;
+}
+#client-settings #config-tabs div.tab[data-tab=modules] #searchField #searchInput {
+  color: var(--foreground-color);
+  border: 2px groove var(--light-border-color);
+  background: rgba(255, 255, 255, 0.2);
+}
+#client-settings #config-tabs div.tab[data-tab=modules] #searchField #clear {
+  width: 16px;
+  height: 16px;
+  font-size: 10px;
+}
+#client-settings.window-app .window-content {
+  padding: 8px !important;
+}
+#client-settings section.content .settings-list {
+  max-height: none !important;
+  border: none !important;
+  padding: 0 !important;
+}
+
+#module-management {
+  min-height: auto !important;
+  height: auto !important;
 }
 
 /*# sourceMappingURL=pirateborg.css.map */
