--- a/scss/pirateborg/_root.scss
+++ b/scss/pirateborg/_root.scss
@@ -10,6 +10,8 @@
   --highlight-background-color: #d20608;
   --highlight-foreground-color: #ffffff;
 
+  --warning-color: var(--highlight-background-color);
+
   --window-background: url(/systems/pirateborg/ui/parchment-2.jpg) repeat;
   --window-header-color: #ffffff;
   --window-header-background-color: #000000;
