--- a/templates/chat/wield-damage.html
+++ b/templates/chat/wield-damage.html
@@ -22,4 +22,7 @@
       </div>
     </div>
   {{/if}}
+  {{#if damageDescription}}
+    <div class="card-description">{{{damageDescription}}}</div>
+  {{/if}}
 </div>
