--- a/scss/pirateborg/_rollcards.scss
+++ b/scss/pirateborg/_rollcards.scss
@@ -13,6 +13,15 @@
     padding-top: 4px;
   }
 
+  .attack-outcome-target {
+    font-style: italic;
+    font-size: 13px;
+    font-weight: 400;
+    margin-bottom: 20px;
+    text-align: center;
+    margin-top: -20px;
+  }
+
   .dr-modifiers {
     margin-bottom: 16px;
   }
@@ -93,6 +102,7 @@
       margin: 0;
     }
   }
+
 
   .outcome-text + .card-description {
     margin: 0;
