--- a/templates/actor/container-sheet.html
+++ b/templates/actor/container-sheet.html
@@ -14,7 +14,7 @@
       <div class="header-stats-row">
         <div class="stats-block">
           <span class="stat-label">{{ localize "PB.ContainerHolding" }}</span>
-          <span class="stat-value stat-right">{{data.data.containerSpace}}</span>
+          <span class="stat-value stat-right">{{data.data.dynamic.containerSpace}}</span>
           <span class="stat-separator">/</span>
           <span class="stat-value stat-left">{{data.data.capacity.max}}</span>
         </div>
