--- a/templates/actor/vehicle-edit-sheet.html
+++ b/templates/actor/vehicle-edit-sheet.html
@@ -43,12 +43,12 @@
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCurrentHp" }}:</label>
-        <input type="text" name="data.hp.value" value="{{data.data.hp.value}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="data.attributes.hp.value" value="{{data.data.attributes.hp.value}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemMaxHp" }}:</label>
-        <input type="text" name="data.hp.max" value="{{data.data.hp.max}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="data.attributes.hp.max" value="{{data.data.attributes.hp.max}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
@@ -63,64 +63,64 @@
 
       <div class="form-group">
         <label>{{ localize "PB.ItemSpeedMax" }}:</label>
-        <input type="text" name="data.speed.max" value="{{data.data.speed.max}}" placeholder="2" data-dtype="Number" />
+        <input type="text" name="data.attributes.speed.max" value="{{data.data.attributes.speed.max}}" placeholder="2" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCargo" }}:</label>
-        <input type="text" name="data.cargo.max" value="{{data.data.cargo.max}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="data.attributes.cargo.max" value="{{data.data.attributes.cargo.max}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCrew" }}:</label>
-        <input type="text" name="data.crew.value" value="{{data.data.crew.value}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="data.attributes.crew.value" value="{{data.data.attributes.crew.value}}" placeholder="0" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemCrewMin" }}:</label>
-        <input type="text" name="data.crew.min" value="{{data.data.crew.min}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="data.attributes.crew.min" value="{{data.data.attributes.crew.min}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemCrewMax" }}:</label>
-        <input type="text" name="data.crew.max" value="{{data.data.crew.max}}" placeholder="0" data-dtype="Number" />
+        <input type="text" name="data.attributes.crew.max" value="{{data.data.attributes.crew.max}}" placeholder="0" data-dtype="Number" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsDie" }}:</label>
-        <input type="text" name="data.smallArmsDie" value="{{data.data.smallArmsDie}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="data.weapons.smallArms.die" value="{{data.data.weapons.smallArms.die}}" placeholder="1d6" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsQuantity" }}:</label>
-        <input type="text" name="data.smallArmsQuantity" value="{{data.data.smallArmsQuantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="data.weapons.smallArms.quantity" value="{{data.data.weapons.smallArms.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemSmallArmsWarning" }}:</label>
-        <input type="text" name="data.smallArmsWarning" value="{{data.data.smallArmsWarning}}" placeholder="" data-dtype="String" />
+        <input type="text" name="data.weapons.smallArms.warning" value="{{data.data.weapons.smallArms.warning}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesDie" }}:</label>
-        <input type="text" name="data.broadsidesDie" value="{{data.data.broadsidesDie}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="data.weapons.broadsides.die" value="{{data.data.weapons.broadsides.die}}" placeholder="1d6" data-dtype="String" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesQuantity" }}:</label>
-        <input type="text" name="data.broadsidesQuantity" value="{{data.data.broadsidesQuantity}}" placeholder="1" data-dtype="Number" />
+        <input type="text" name="data.weapons.broadsides.quantity" value="{{data.data.weapons.broadsides.quantity}}" placeholder="1" data-dtype="Number" />
       </div>
       <div class="form-group">
         <label>{{ localize "PB.ItemBroadsidesWarning" }}:</label>
-        <input type="text" name="data.broadsidesWarning" value="{{data.data.broadsidesWarning}}" placeholder="" data-dtype="String" />
+        <input type="text" name="data.weapons.broadsides.warning" value="{{data.data.weapons.broadsides.warning}}" placeholder="" data-dtype="String" />
       </div>
 
       <div class="form-group">
         <label>{{ localize "PB.ItemRamDie" }}:</label>
-        <input type="text" name="data.ramDie" value="{{data.data.ramDie}}" placeholder="1d6" data-dtype="String" />
+        <input type="text" name="data.weapons.ram.die" value="{{data.data.weapons.ram.die}}" placeholder="1d6" data-dtype="String" />
       </div>
 
       {{! Armor Current Tier }}
       <div class="form-group">
         <label>{{localize "PB.ItemHullCurrentTier"}}:</label>
-        <select name="data.hull.value" data-dtype="Number">
-          {{#select data.data.hull.value}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="data.attributes.hull.value" data-dtype="Number">
+          {{#select data.data.attributes.hull.value}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
@@ -129,8 +129,8 @@
       {{! Armor Max Tier }}
       <div class="form-group">
         <label>{{ localize "PB.ItemHullMaxTier" }}:</label>
-        <select name="data.hull.max" data-dtype="Number">
-          {{#select data.data.hull.max}} {{#each config.armorTiers as |tierObj tierNum|}}
+        <select name="data.attributes.hull.max" data-dtype="Number">
+          {{#select data.data.attributes.hull.max}} {{#each config.armorTiers as |tierObj tierNum|}}
           <option value="{{tierNum}}">{{tierNum}} ({{localize tierObj.key}})</option>
           {{/each}} {{/select}}
         </select>
