--- a/templates/dialog/attack-dialog.html
+++ b/templates/dialog/attack-dialog.html
@@ -1,5 +1,18 @@
 <form class="custom-dialog attack-dialog">
   <input type="hidden" name="itemid" value="{{itemId}}" />
+  {{#if shouldShowTarget}}
+    <div class="form-group form-group-target">
+      <label>{{localize "PB.Target"}}:</label>
+      <div class="target-selection {{#if hasTargetWarning }}warning{{/if}}">
+        {{#if isTargetSelectionValid}}
+          {{target}}
+        {{else}}
+          {{localize "PB.TargetInvalid"}}
+        {{/if}}         
+      </div>
+    </div>
+  {{/if}}    
+
   <div class="form-group">
     <label>{{localize "PB.Attack"}} {{localize "PB.DR"}}:</label>
     <input id="attackDr" type="text" name="attackdr" value="{{attackDR}}" placeholder="12" data-dtype="Number" />
