--- a/css/pirateborg.css
+++ b/css/pirateborg.css
@@ -1121,7 +1121,7 @@ form.editable .results input[type=text]:hover, form.editable .results input[type
 }
 
 .token-sheet {
-  min-width: 700px;
+  min-width: 850px;
 }
 
 #client-settings section.content {
@@ -1767,7 +1767,7 @@ footer.nue {
 }
 .defense-dialog .form-group.form-group-target,
 .attack-dialog .form-group.form-group-target {
-  margin: 0;
+  margin: 0 16px 0 16px;
 }
 .defense-dialog .form-group.form-group-target .target-selection,
 .attack-dialog .form-group.form-group-target .target-selection {
@@ -1776,6 +1776,9 @@ footer.nue {
   display: flex;
   gap: 8px;
   justify-content: flex-start;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .defense-dialog .form-group.form-group-target .target-selection img,
 .attack-dialog .form-group.form-group-target .target-selection img {
@@ -1858,14 +1861,23 @@ footer.nue {
   text-transform: capitalize;
   margin: 16px 0 8px 0;
 }
+#help-dialog .sheet-body .warning {
+  color: var(--highlight-background-color);
+}
+#help-dialog .sheet-body .section .module {
+  margin-bottom: 24px;
+}
+#help-dialog .sheet-body .section .module .module-info {
+  font-size: 14px;
+}
 #help-dialog .sheet-body .section .buttons-row {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-#help-dialog .sheet-body button,
-#help-dialog .sheet-body a {
+#help-dialog .sheet-body .section .buttons-row button,
+#help-dialog .sheet-body .section .buttons-row a {
   background: var(--button-background);
   color: var(--button-color);
   font-family: var(--button-font);
