--- a/scss/pirateborg/_dialog.scss
+++ b/scss/pirateborg/_dialog.scss
@@ -154,7 +154,7 @@
     }
 
     &.form-group-target {
-      margin: 0;
+      margin: 0 16px 0 16px;
 
       .target-selection {
         height: var(--form-field-height);
@@ -162,6 +162,9 @@
         display: flex;
         gap: 8px;
         justify-content: flex-start;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         img {
           width: 24px;
           height: 24px;
